--- a/package.json
+++ b/package.json
@@ -4,17 +4,28 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "4.17.1",
+    "cors": "^2.8.5",
+    "debug": "^4.3.7",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.2.0",
+    "helmet": "^7.1.0",
+    "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "pug": "^3.0.3",
+    "sanitize": "^2.1.2",
     "sequelize": "^6.23.0",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "tedious": "^18.2.1"
   },
   "scripts": {
-    "start": "nodemon ./src/server.js",
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js",
     "seed": "node ./scripts/seedDb.js"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.1.9"
   },
   "engines": {
     "node": ">=10.16.3"
