--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "helmet": "^7.1.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "pug": "^3.0.3",
     "sanitize": "^2.1.2",
     "sequelize": "^6.23.0",
